--- a/style.css
+++ b/style.css
@@ -2,15 +2,18 @@
     font-family: "Norse Bold";
     src: url(fonts/Norse-Bold.otf);
 }
+
 * {
     margin: 0;
     padding: 0;
-    font-family: arial,Verdana, Geneva, Tahoma, sans-serif;
+    font-family: arial, Verdana, Geneva, Tahoma, sans-serif;
     box-sizing: border-box;
 }
-body{
-    background-color: rgb(254, 255, 242);
+
+body {
+    background-image: linear-gradient(to right, rgb(225 255 252 / 97%), #FFFFFF);
 }
+
 .first_row,
 .second_row,
 .third_row {
@@ -19,9 +22,14 @@ body{
     margin: 20px;
 }
 
+label {
+    color: hsl(181.18deg 79.54% 55.37%);
+    font-size: 15px;
+}
+
 input {
     border: 1.5px solid#E5E7EB;
-    padding: 8px 90px;
+    padding: 8px 50px;
     border-radius: 5px;
 }
 
@@ -45,24 +53,25 @@ input:focus {
 
 button {
     padding: 12px 30px;
-    margin: 25px;
+    margin: 25px 25px 10px 25px;
     border-radius: 5px;
     border: none;
-    background-color: #c7c40b;
+    background-color: #00d0b2;
     color: white;
     font-weight: bold;
 }
 
-.container{
+.container {
     display: flex;
 }
 
-.img_container img{
+.img_container img {
     width: 100%;
     height: 100vh;
-    background-color: rgb(229, 219, 26);
+    background-color: rgb(86 244 249 / 97%);
 }
-.img_container p{
+
+.img_container p {
     background-color: rgba(0, 0, 0, 0);
     color: white;
     padding: 25px;
@@ -71,12 +80,14 @@ button {
     position: absolute;
     font-family: 'Norse Bold';
 }
-.form_container{
+
+.form_container {
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
-.para{
+
+.para {
     padding: 25px;
-    margin-bottom: 40px;
+    margin-bottom: 30px;
 }
